[package]
name = "lnrpc"
version = "0.0.1"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
license = "MIT"
description = "RPC bindings for github.com/lightningnetwork/lnd"
readme = "README.md"
repository = "https://github.com/edouardparis/lnrpc.git"

[dependencies]
tonic = { version = "0.2.1" , features = ['tls'] }
bytes = "0.5.4"
prost = "0.6.1"

[build-dependencies]
tonic-build = "0.2.0"
