[package]
name = "lnrpc"
version = "0.0.1"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
license = "MIT"
description = "RPC bindings for github.com/lightningnetwork/lnd"
readme = "README.md"
repository = "https://github.com/edouardparis/lnrpc.git"

[dependencies]
bytes = "0.5.4"
hex = "0.4.2"
prost = "0.6.1"
tonic = { version = "0.3.0" , features = ['transport', 'tls'] }

[dev-dependencies]
tokio = { version = "0.2", features = ["fs", "macros"] }
tokio-rustls = { version = "0.14.0", features = ["dangerous_configuration"]}
webpki = "0.21.3"

[build-dependencies]
tonic-build = "0.3.0"
